# cuda-mandelbrot-visualizer

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  mandelbrot.cpp
src/: main.cpp
src/mandelbrot/: mandelbrot.cpp  mandelbrot.hpp  openmp.hpp  sequential.cpp  sequential.hpp  settings.hpp
src/ui/: color.hpp  menu.cpp  menu.hpp  state.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  mandelbrot.cpp
